--- a/css/game.css
+++ b/css/game.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Gloock&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
+@import url(./variables.css);
 
 * {
   margin: 0;
@@ -7,17 +7,42 @@
   box-sizing: border-box;
   font-family: "Gloock", serif;
 }
-
+html,
 body {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
   background-color: #f0f2f5;
   color: #333;
+}
+
+.bg-video {
+  position: fixed;
+  z-index: 0;
+  pointer-events: none;
+  width: 120px; /* adjust as needed */
+  height: auto;
+  opacity: 0.8; /* optional: slightly transparent */
+}
+
+/* Positioning for each corner */
+.bg-left {
+  bottom: 0;
+  left: 0;
+  margin: 10px;
+}
+
+.bg-right {
+  top: 0;
+  right: 0;
+  margin: 10px;
 }
 
 .container {
   max-width: 800px;
   margin: 20px auto;
   padding: 20px;
-  background-color: #fff;
+  background-color: var(--white);
   border-radius: 12px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
   margin-top: 10rem;
