--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Gloock&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
+@import url(./variables.css);
 * {
   margin: 0;
   padding: 0;
@@ -7,22 +7,10 @@
   font-family: "Gloock", serif;
 }
 
-:root {
-  --white: #ffffff;
-  --royal_blue: #4169e1;
-  --soft_gold: #ffd700;
-  --crimson_red: #b22222;
-  --deep_purple: #4b0082;
-
-  /* Modern palette additions */
-  --navy: #1a2238;
-  --teal: #0d7377;
-  --light-gold: #f9f871;
-}
-
 html,
 body {
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
   overflow: hidden;
 }
 
